packages/core/src/scss/_header.scss
.#{$prefix}header {
  display: flex;
  flex-flow: row wrap;
  flex-direction: row;
  position: relative;
  z-index: 10;
}

.#{$prefix}header-row {
  width: 100%;
}

.#{$prefix}header-cell-draggable {
  cursor: pointer;

  &.#{$prefix}dragging {
    transition: left 0.2s;
    user-select: none;
  }
}

.#{$prefix}header-sorter {
  margin-left: var(--#{$prefix}header-sorter-margin-left);
  display: flex;

  .#{$prefix}header-sorter-index {
    font-size: var(--#{$prefix}header-sorter-index-font-size);
  }

  &:hover .#{$prefix}header-sorter-arrow-svg {
    color: var(--#{$prefix}header-sorter-arrow-sorted-color);
  }

  .#{$prefix}header-sorter-arrow {
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;

    &.#{$prefix}header-sorter-arrow-asc .#{$prefix}header-sorter-arrow-svg {
      color: var(--#{$prefix}header-sorter-arrow-sorted-color);
      transform: var(--#{$prefix}header-sorter-asc-transform);
      opacity: 1;
    }

    &.#{$prefix}header-sorter-arrow-desc .#{$prefix}header-sorter-arrow-svg {
      color: var(--#{$prefix}header-sorter-arrow-sorted-color);
      transform: var(--#{$prefix}header-sorter-desc-transform);
      opacity: 1;
    }

    .#{$prefix}header-sorter-arrow-svg {
      color: var(--#{$prefix}header-sorter-arrow-unsorted-color);
      height: 1rem;
      width: 1rem;
      opacity: 0;
      &:hover {
        color: var(--#{$prefix}header-sorter-arrow-sorted-color);
      }
    }
  }
}

.#{$prefix}header-filter {
  display: block;
  margin: var(--#{$prefix}header-filter-input-margin);

  .#{$prefix}header-filter-input,
  .#{$prefix}header-filter-select {
    width: var(--#{$prefix}header-filter-input-width);
    border: var(--#{$prefix}header-filter-input-border);
    border-radius: var(--#{$prefix}header-filter-input-border-radius);
    padding: var(--#{$prefix}header-filter-input-padding);
    height: var(--#{$prefix}header-filter-input-height);
    background: var(--#{$prefix}header-filter-input-bg);
    &:focus {
      outline: var(--#{$prefix}header-filter-input-border);
    }
  }

  .#{$prefix}header-filter-select option {
    background-color: var(--#{$prefix}header-filter-select-bg);
  }
}

.#{$prefix}header-resizer {
  position: absolute;
  z-index: 3;
  right: 0;
  top: 0;
  height: 100%;
  padding-right: var(--#{$prefix}header-resizer-padding-right);
  width: var(--#{$prefix}header-resizer-width);
  &:after {
    position: absolute;
    display: block;
    content: '';
    height: 30%;
    width: var(--#{$prefix}header-resizer-width);
    cursor: col-resize;
    background-color: var(--#{$prefix}header-resizer-bg);
    top: calc(50% - 30% * 0.5);
  }
}

.#{$prefix}header-resizer-left {
  left: 0;
  right: auto;
}

.#{$prefix}header-left-cells-wrapper {
  display: flex;
  position: sticky;
  left: 0;
  float: left;
  z-index: 5;
  height: 100%;
}

.#{$prefix}header-main-cells-wrapper {
  position: absolute;
  z-index: 0;
  height: 100%;
}

.#{$prefix}header-right-cells-wrapper {
  display: flex;
  position: sticky;
  right: 0;
  float: right;
  z-index: 5;
  height: 100%;
}

.#{$prefix}header-cell-main {
  display: flex;
  justify-content: space-between;
}

.#{$prefix}header-cell {
  background-color: var(--#{$prefix}header-cell-bg);
  display: flex;
  flex-direction: column;
  padding: var(--#{$prefix}header-cell-padding);
  position: absolute;
  font-weight: var(--#{$prefix}header-cell-font-weight);
  height: inherit;
  border-bottom: var(--#{$prefix}header-cell-border);
  .#{$prefix}header-cell-value {
    display: flex;
    pointer-events: none;
    align-items: center;
  }

  &:not(.#{$prefix}header-cell-filterable) {
    justify-content: center;
  }

  &.#{$prefix}active {
    background-color: var(--#{$prefix}header-cell-active-bg);
    border-bottom: none;
    z-index: 2;
    & > * {
      pointer-events: none;
    }
  }

  &:hover .#{$prefix}header-sorter-arrow-svg {
    opacity: 1;
  }
}

.#{$prefix}header-cell-pinned-left {
  position: relative;
  float: left;
}

.#{$prefix}header-cell-pinned-left:last-child {
  border-right: var(--#{$prefix}cell-pinned-border);
}

.#{$prefix}header-cell-pinned-right {
  position: relative;
  float: right;
}

.#{$prefix}header-cell-pinned-right:first-child {
  border-left: var(--#{$prefix}cell-pinned-border);
}

.#{$prefix}header-value-and-sorter {
  display: flex;
}

.#{$prefix}header-menu-toggler {
  display: none;
  width: 16px;
  border: none;
  background: none;
  cursor: pointer;
  z-index: 10;
  padding: 0;

  &:focus {
    outline: none;
  }
}

.#{$prefix}header-cell:hover {
  .#{$prefix}header-menu-toggler {
    display: block;
  }
}

.#{$prefix}header-menu-toggler-icon {
  color: var(--#{$prefix}header-menu-toggler-icon-color);
}

.#{$prefix}header-menu-dropdown {
  position: absolute;
  right: var(--#{$prefix}header-menu-right);
  top: var(--#{$prefix}header-menu-top);
  z-index: 3;
  width: var(--#{$prefix}header-menu-width);
  background-color: var(--#{$prefix}header-menu-bg);
  border: var(--#{$prefix}header-menu-border);
  border-radius: var(--#{$prefix}header-menu-border-radius);
  box-shadow: var(--#{$prefix}header-menu-box-shadow);
  display: none;
  flex-direction: column;
  overflow: hidden;
  max-height: var(--#{$prefix}header-menu-max-height);
  overflow-y: auto;
  font-size: var(--#{$prefix}header-menu-font-size);
  padding: var(--#{$prefix}header-menu-border);

  &.active {
    display: flex;
  }
}

.#{$prefix}header-menu-dropdown-item {
  padding: var(--#{$prefix}header-menu-item-padding);
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-decoration: none;
  color: var(--#{$prefix}header-menu-item-color);

  &:hover {
    background-color: var(--#{$prefix}header-menu-item-hover-bg);
  }
}

